--- a/maven/plugins/org.jboss.tools.maven.portlet/about.html
+++ b/maven/plugins/org.jboss.tools.maven.portlet/about.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>Integration Seam projects with Maven</title>
+<title>JBoss Maven Portlet Configurator</title>
 <style type="text/css" media="screen">
 <!--
   body {
