--- a/maven/plugins/org.jboss.tools.maven.core/about.html
+++ b/maven/plugins/org.jboss.tools.maven.core/about.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>JBoss Maven JSF Configurator</title>
+<title>JBoss Maven Core</title>
 <style type="text/css" media="screen">
 <!--
   body {
@@ -14,7 +14,7 @@
 </style>
 </head>
 <body>
-<h1>JBoss Maven JSF Configurator</h1>
+<h1>JBoss Maven Core</h1>
 
 <p>
 This plugin is part of the JBoss Tools developed by the <a href="http://www.jboss.com">JBoss Inc.</a>
