--- a/maven/plugins/org.jboss.tools.maven.seam/about.html
+++ b/maven/plugins/org.jboss.tools.maven.seam/about.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>Integration Seam projects with Maven</title>
+<title>JBoss Maven Seam Configurator</title>
 <style type="text/css" media="screen">
 <!--
   body {
@@ -14,7 +14,7 @@
 </style>
 </head>
 <body>
-<h1>Integration Seam projects with Maven</h1>
+<h1>JBoss Maven Seam Configurator</h1>
 
 <p>
 This plugin is part of the JBoss Tools developed by the <a href="http://www.jboss.com">JBoss Inc.</a>
